# vertex_mlops

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.server  README.md  pyproject.toml  pytest.ini  test.json
.github/workflows/: ci_cd.yml
app/: main.py
cloud_function/: main.py  openapi.yaml  requirements.txt
infra/: artifact.tf  iam.tf  project.tf  provider.tf  storage.tf  terraform.tfvars  variables.tf
pipelines/: run_pipeline.py  train_pipeline.py
price_model/: data.py  model.py
price_model_package/price_model/: data.py  pyproject.toml
price_model_package/price_model/price_model/: constants.py  data.py
price_model_package/tests/: data.py
tests/: test_data.py
