[tool.poetry]
name = "price-model"
version = "1.0.0"
description = "Price model package"
authors = ["kdrivas <k.rivas@pucp.edu.pe>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.3"
xgboost = "2.1.4"
scikit-learn = "1.6.1"
joblib = "1.4.2"
fastapi = "0.115.8"
uvicorn = "0.34.0"
eccd-datasets = "0.1.1"

[tool.poetry.group.test.dependencies]
autopep8 = "^1.5.7"
isort = "^5.9.3"
pre-commit = "^2.14.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
